<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/background">

    <RelativeLayout
        android:minWidth="200dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/reg_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:gravity="center"
            android:text="@string/registration_title"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:layout_below="@+id/reg_tv_title"
            android:layout_alignParentStart="true"
            android:background="@drawable/input_form_layout"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/email_input"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_text_color"
            android:layout_below="@+id/email_et"
            android:layout_alignParentStart="true"
            android:background="@drawable/input_form_layout"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/password_input"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="10dp"
            android:text="@string/registration_btn"
            android:background="@drawable/button_background"
            android:textColor="@color/button_text_color"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/login_tv_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_button"
            android:gravity="end"
            android:textColor="@color/button_color"
            android:text="@string/exist_account_text"
            android:textSize="16sp"
            android:paddingRight="25px"/>

    </RelativeLayout>

</ScrollView>