<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BigList"
    android:background="@color/background">

<!--    <include-->
<!--        android:id="@+id/bar_main"-->
<!--        layout="@layout/bar_main_layout">-->
<!--    </include>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:gravity="center"
        android:background="@color/background"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home_imgbtn_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:background="@color/background"
            android:scaleType="fitXY"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/title_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/home_imgbtn_bar"
            android:text="@string/app_name"
            android:textColor="@color/main_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/exit_imgbtn_bar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/title_bar"
            android:background="@color/background"
            android:scaleType="fitXY"
            android:src="@drawable/ic_exit" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="90">

            <ProgressBar
                android:id="@+id/loadingBList"
                android:layout_width="70dp"
                android:layout_height="92dp"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:theme="@style/CircularProgress"/>

            <LinearLayout
                android:id="@+id/component_visible_BList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/email_text_color"
                    android:text=""
                    tools:layout_editor_absoluteX="170dp"
                    tools:layout_editor_absoluteY="109dp" />

                <LinearLayout
                    android:id="@+id/input_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100">

                    <EditText
                        android:id="@+id/bigList_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="100"
                        android:padding="10dp"
                        android:hint="@string/name_list_text"
                        android:inputType="text"
                        android:background="@drawable/input_add_list_layout"
                        android:importantForAutofill="no" />

                    <Button
                        android:id="@+id/add_bigList_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_add_list_layout"
                        android:padding="10dp"
                        android:text="@string/create_text"
                        android:textAllCaps="false"
                        android:textColor="@color/btn_text_color" />

                </LinearLayout>

                <TextView
                    android:id="@+id/my_lists_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/main_text_color"
                    android:text="@string/my_lists_text"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bigList_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>